[package]
name = "ooxml"
version = "0.1.0"
authors = ["gensmusic <gensmusic@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5"
anyhow = { version = "1.0" }
xml-rs = "0.8"
structopt = { version = "0.3", default-features = false }
